--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,12 +8,11 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <script src="http://cdn.ckeditor.com/4.6.1/standard/ckeditor.js"></script>
+ 
   </head>
   <body>
 
-   <nav class="navbar navbar-expand-md navbar-dark bg-light">
+   <nav class="navbar navbar-expand-md navbar-dark ">
     <div class="container">
       <a class="navbar-brand" href="#">Logo</a>
        <img src="img/logo.png">
@@ -74,45 +73,132 @@
       </div>
     </section>
 
-    <section id="section-a">
-      <div class="container">
-        <h3>Job Postings</h3>
-        
-        <form>
-          <div class="row">
-            <div class="col-md-0 ">
-          <p>Filter</p>
-        </div>
-        <div class="col-md-9 ">
-          <select class="custom-select d-block w-25" id="country" required="">
-                  <option value="">Choose...</option>
-                  <option>Web developer</option>
+<section id="joblistings " class="my-5 ">
+    <div class="container ">
+      <h2 class="text-center ">Job Postings</h2>
+      <form action=" " class="form-inline ">
+        <span class="font-weight-bold mr-3 ">Filter</span>
+        <select name=" " id=" " class="form-control w-25 ">
+          <option selected>Select job role</option>
         </select>
-      </div>
-      </div>
-        </form>
-         <div class="row">
-          <div class="col-md-6 ">
-           <div class="left">
-             <img src="img/msn.png">
-             
-           </div>
-             
-          
-          </div>
-           <div class="col-md-6">
-            <div class="right">
-              <img src="img/msn.png">
+      </form>
+      <div class="mt-4 ">
+        <div class="row ">
+          <div class="col-md-6 my-3 ">
+            <div class="card p-3 ">
+              <div class="d-flex justify-content-between ">
+                <img src="/images/microsoft.svg " alt=" ">
+                <span class="font-weight-bold ">Senior Backend developer</span>
+                <a href=" " class="text-muted ">view &#x2192;</a>
+              </div>
             </div>
-          
           </div>
-        </div>  
-      </div>
+          <div class="col-md-6 my-3 ">
+            <div class="card p-3 ">
+              <div class="d-flex justify-content-between ">
+                <img src="/images/microsoft.svg " alt=" ">
+                <span class="font-weight-bold ">Senior Backend developer</span>
+                <a href=" " class="text-muted ">view &#x2192;</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 my-3 ">
+            <div class="card p-3 ">
+              <div class="d-flex justify-content-between ">
+                <p class="d-flex my-0 align-items-center ">
+                  <img src="/images/facebook.svg " alt=" " height="30 " width="30 ">
+                  <span class="text-muted ml-2 ">Facebook</span>
+                </p>
+                <span class="font-weight-bold ">Senior Backend developer</span>
+                <a href=" " class="text-muted ">view &#x2192;</a>
+              </div>
+            </div>
+          </div>
 
-    </section>
+          <div class="col-md-6 my-3 ">
+            <div class="card p-3 ">
+              <div class="d-flex justify-content-between ">
+                <img src="/images/microsoft.svg " alt=" ">
+                <span class="font-weight-bold ">Senior Backend developer</span>
+                <a href=" " class="text-muted ">view &#x2192;</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 my-3 ">
+            <div class="card p-3 ">
+              <div class="d-flex justify-content-between ">
+                <p class="d-flex my-0 align-items-center ">
+                  <img src="/images/lyft.svg " alt=" " height="30 " width="30 ">
+                  <span class="text-muted ml-2 ">lyft</span>
+                </p>
+                <span class="font-weight-bold ">Senior Backend developer</span>
+                <a href=" " class="text-muted ">view &#x2192;</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 my-3 ">
+            <div class="card p-3 ">
+              <div class="d-flex justify-content-between ">
+                <img src="/images/microsoft.svg " alt=" ">
+                <span class="font-weight-bold ">Senior Backend developer</span>
+                <a href=" " class="text-muted ">view &#x2192;</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 my-3 ">
+            <div class="card p-3 ">
+              <div class="d-flex justify-content-between ">
+                <p class="d-flex my-0 align-items-center ">
+                  <img src="/images/facebook.svg " alt=" " height="30 " width="30 ">
+                  <span class="text-muted ml-2 ">Facebook</span>
+                </p>
+                <span class="font-weight-bold ">Senior Backend developer</span>
+                <a href=" " class="text-muted ">view &#x2192;</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 my-3 ">
+            <div class="card p-3 ">
+              <div class="d-flex justify-content-between ">
+                <img src="/images/microsoft.svg " alt=" ">
+                <span class="font-weight-bold ">Senior Backend developer</span>
+                <a href=" " class="text-muted ">view &#x2192;</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 my-3 ">
+            <div class="card p-3 ">
+              <div class="d-flex justify-content-between ">
+                <img src="/images/microsoft.svg " alt=" ">
+                <span class="font-weight-bold ">Senior Backend developer</span>
+                <a href=" " class="text-muted ">view &#x2192;</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 my-3 ">
+            <div class="card p-3 ">
+              <div class="d-flex justify-content-between ">
+                <img src="/images/microsoft.svg " alt=" ">
+                <span class="font-weight-bold ">Senior Backend developer</span>
+                <a href=" " class="text-muted ">view &#x2192;</a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+        <p class=" d-flex justify-content-center mt-4 ">
+          <a class="mr-4 ">load more listings</a>
+          <img src="/images/arrowdown.svg " alt=" ">
+        </p>
+      </div>
+    </div>
+  </section>
+
+   
 
     <section id="section-b">
-        <footer class="container py-5">
+        <foot class="container py-5">
       <div class="row">
         <div class="col-6 col-md-4 cent ">
           <h5>COMPANY</h5>
@@ -143,7 +229,7 @@
         </div>
         
       </div>
-    </footer>
+    </foot>
     </section>
 
     <footer id="footer">
