--- a/views/index.hbs
+++ b/views/index.hbs
@@ -89,7 +89,7 @@
               <div class="d-flex justify-content-between ">
                 <img src="/images/microsoft.svg " alt=" ">
                 <span class="font-weight-bold ">Senior Backend developer</span>
-                <a href=" " class="text-muted ">view &#x2192;</a>
+               <a type="" data-toggle="modal" data-target="#viewPost" data-whatever="" class="text-muted ">view &#x2192;</a>
               </div>
             </div>
           </div>
@@ -98,7 +98,7 @@
               <div class="d-flex justify-content-between ">
                 <img src="/images/microsoft.svg " alt=" ">
                 <span class="font-weight-bold ">Senior Backend developer</span>
-                <a href=" " class="text-muted ">view &#x2192;</a>
+                <a type="" data-toggle="modal" data-target="#viewPost" data-whatever="" class="text-muted ">view &#x2192;</a>
               </div>
             </div>
           </div>
@@ -110,7 +110,7 @@
                   <span class="text-muted ml-2 ">Facebook</span>
                 </p>
                 <span class="font-weight-bold ">Senior Backend developer</span>
-                <a href=" " class="text-muted ">view &#x2192;</a>
+                <a type="" data-toggle="modal" data-target="#viewPost" data-whatever="" class="text-muted ">view &#x2192;</a>
               </div>
             </div>
           </div>
@@ -120,7 +120,7 @@
               <div class="d-flex justify-content-between ">
                 <img src="/images/microsoft.svg " alt=" ">
                 <span class="font-weight-bold ">Senior Backend developer</span>
-                <a href=" " class="text-muted ">view &#x2192;</a>
+                <a type="" data-toggle="modal" data-target="#viewPost" data-whatever="" class="text-muted ">view &#x2192;</a>
               </div>
             </div>
           </div>
@@ -132,7 +132,7 @@
                   <span class="text-muted ml-2 ">lyft</span>
                 </p>
                 <span class="font-weight-bold ">Senior Backend developer</span>
-                <a href=" " class="text-muted ">view &#x2192;</a>
+                <a type="" data-toggle="modal" data-target="#viewPost" data-whatever="" class="text-muted ">view &#x2192;</a>
               </div>
             </div>
           </div>
@@ -141,7 +141,7 @@
               <div class="d-flex justify-content-between ">
                 <img src="/images/microsoft.svg " alt=" ">
                 <span class="font-weight-bold ">Senior Backend developer</span>
-                <a href=" " class="text-muted ">view &#x2192;</a>
+                <a type="" data-toggle="modal" data-target="#viewPost" data-whatever="" class="text-muted ">view &#x2192;</a>
               </div>
             </div>
           </div>
@@ -153,7 +153,7 @@
                   <span class="text-muted ml-2 ">Facebook</span>
                 </p>
                 <span class="font-weight-bold ">Senior Backend developer</span>
-                <a href=" " class="text-muted ">view &#x2192;</a>
+                <a type="" data-toggle="modal" data-target="#viewPost" data-whatever="" class="text-muted ">view &#x2192;</a>
               </div>
             </div>
           </div>
@@ -162,7 +162,7 @@
               <div class="d-flex justify-content-between ">
                 <img src="/images/microsoft.svg " alt=" ">
                 <span class="font-weight-bold ">Senior Backend developer</span>
-                <a href=" " class="text-muted ">view &#x2192;</a>
+                <a type="" data-toggle="modal" data-target="#viewPost" data-whatever="" class="text-muted ">view &#x2192;</a>
               </div>
             </div>
           </div>
@@ -171,7 +171,7 @@
               <div class="d-flex justify-content-between ">
                 <img src="/images/microsoft.svg " alt=" ">
                 <span class="font-weight-bold ">Senior Backend developer</span>
-                <a href=" " class="text-muted ">view &#x2192;</a>
+                <a type="" data-toggle="modal" data-target="#viewPost" data-whatever="" class="text-muted ">view &#x2192;</a>
               </div>
             </div>
           </div>
@@ -180,7 +180,7 @@
               <div class="d-flex justify-content-between ">
                 <img src="/images/microsoft.svg " alt=" ">
                 <span class="font-weight-bold ">Senior Backend developer</span>
-                <a href=" " class="text-muted ">view &#x2192;</a>
+                <a type="" data-toggle="modal" data-target="#viewPost" data-whatever="" class="text-muted ">view &#x2192;</a>
               </div>
             </div>
           </div>
@@ -264,6 +264,47 @@
   </div>
 </div>
 
+<div class="modal fade" id="viewPost"  role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel"><span><img src="img/tick.jpg"></span> Job Details</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+        <div class="col-6 col-md-6 space ">
+          <p>Job Title</p>
+          <ul class="list-unstyled ">
+            <li><h5>Full Satck Developer<h5></li>
+            
+          </ul>
+        </div>
+        <div class="col-6 col-md-6 space ">
+          <p>Company</p>
+          <ul class="list-unstyled ">
+            <li><h5>Microsoft Technology</h5></li>
+          </ul>
+        </div>
+        
+      </div>
+        <h5>Requirements</h5>
+        <p>3 years Experience</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat </p>
+      </div>
+      <div class="modal-foot">
+       
+        <button  type="button" class="btn btn-remote"><span>Hire An Agent</span></button>
+      </div>
+      </div>
+      
+    </div>
+  </div>
+</div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
